test for notebook.delete

--- a/spec/notebookSpec.html
+++ b/spec/notebookSpec.html
@@ -7,7 +7,9 @@
     <div id="results">
       </div>
     <script src='../bucket-test-framework/bucket.js'></script>
+    <script src='../src/notebook.js'></script>
     <script src='./notebookSpec.js'></script>
+
     <script>
       console.log("Total tests: " + (passes + fails));
       console.log("Passes: " + (passes));
