--- a/spec/notebookSpec.html
+++ b/spec/notebookSpec.html
@@ -7,6 +7,7 @@
     <div id="results">
       </div>
     <script src='../bucket-test-framework/bucket.js'></script>
+    <script src='../src/note.js'></script>
     <script src='../src/notebook.js'></script>
     <script src='./notebookSpec.js'></script>
 
